--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "external/VSRTL"]
 	path = external/VSRTL
-	url = https://github.com/mortbopet/VSRTL
+	url = https://github.com/Bigt0rch/VSRTL
 [submodule "external/ELFIO"]
 	path = external/ELFIO
 	url = https://github.com/serge1/ELFIO
